# ubyte

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_byteunit.rs
src/: arithmetic.rs  byte_unit.rs  lib.rs  parse.rs  ser_de.rs
tests/: with_serde_json.rs
