[package]
name = "ubyte"
version = "0.9.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
edition = "2018"
description = """
A simple, complete, const-everything, saturating, human-friendly, no_std library for byte units.
"""
documentation = "https://docs.rs/ubyte/0.9"
repository = "https://github.com/SergioBenitez/ubyte"
readme = "README.md"
keywords = ["byte", "human", "units", "conversion", "integer"]
license = "MIT OR Apache-2.0"
categories = ["value-formatting", "encoding", "no-std"]

[dependencies]
