[package]
name = "ubyte"
version = "0.10.4"
authors = ["Sergio Benitez <sb@sergio.bz>"]
edition = "2018"
description = """
A simple, complete, const-everything, saturating, human-friendly, no_std library for byte units.
"""
documentation = "https://docs.rs/ubyte/0.10"
repository = "https://github.com/SergioBenitez/ubyte"
readme = "README.md"
keywords = ["byte", "human", "units", "conversion", "integer"]
license = "MIT OR Apache-2.0"
categories = ["value-formatting", "encoding", "no-std"]

[features]
default = []

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1"
